# icici-market-analytics

./: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  FINAL_VALIDATION.md  FINAL_VERIFICATION_REPORT.md  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  run_dashboard.py  run_pipeline.py
.streamlit/: config.toml
app/: _bootstrap.py  main.py
app/components/: __init__.py  charts.py  tables.py
app/pages/: 1_Market_Overview.py  2_Momentum_Rankings.py  3_Volatility_Analysis.py  4_Live_Monitor.py  5_Data_Quality.py
config/: settings.py
data/universe/: nifty500.csv
docs/: ICICI_SETUP.md
scripts/: expand_universe.py  refresh_session.py  verify_icici_live.py
src/analytics/: __init__.py  engine.py  momentum.py  returns.py  risk.py  volatility.py
src/cache/: __init__.py  manager.py
src/data/: __init__.py  fetcher.py  processor.py  validator.py
src/providers/: __init__.py  base.py  corp_actions_source.py  factory.py  icici.py  mock.py  yfinance_provider.py
src/scheduler/: __init__.py  jobs.py
src/storage/: __init__.py  database.py  models.py  repository.py
src/universe/: __init__.py  loader.py
tests/: conftest.py
tests/integration/: test_database.py  test_icici_provider.py  test_pipeline.py
tests/mock/: test_mock_provider.py
tests/unit/: test_cache.py  test_corp_actions_source.py  test_factory.py  test_momentum.py  test_processor.py  test_returns.py  test_risk.py  test_scheduler.py  test_settings.py  test_universe_loader.py  test_validator.py  test_volatility.py
